<resources>
    <string name="app_name">Digital Thermometer</string>
    <string name="new_capture">New Capture</string>
    <string name="go_to_database">Go to Database</string>
    <string name="welcome">Welcome to Digital Thermometer!</string>
    <string name="title_activity_readings">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="capture">Capture</string>
    <string name="go">Go</string>
    <string name="populate_with_database">"TODO: Populate with database items"</string>
    <string name="temp">Temperature:</string>
    <string name="time">Time Created</string>
    <string name="sort">Sort</string>
    <string name="export_data">Export Data</string>
    <string name="add_dummy_data">Add Data</string>
    <string name="pick_column">Pick a column</string>
    <string name="title_activity_maps">Map</string>
    <string name="readings_yellow">
        <![CDATA[<li style="color: yellow;">
      <font color=\'#FF8000\'>Readings on : </font>
      </li>]]>
    </string>
    <string name="location_permission_denied">permission denied</string>
    <string name="negative">Negative</string>
    <string name="negativeReadingDesc">You do not have a feverish temperature.\n\n If you are experiencing other symptoms, please click the button below</string>
    <string name="positiveReadingDesc">You have a feverish temperature.\n\n Please continue to the Google Maps to find nearby testing locations</string>
    <string name="infoButtonDesc">Redirects user to modal with more symptoms listed</string>
    <string name="redirectHome">Home</string>
    <string name="symptoms_dialog_title">Are you experiencing the following symptoms?</string>
    <string name="cough">Cough</string>
    <string name="headache">Headache</string>
    <string name="difficulty_breathing">Difficulty Breathing</string>
    <string name="nausea">Nausea</string>
    <string name="loss_of_taste_smell">Loss of Taste/Smell</string>
    <string name="sore_throat">Sore Throat</string>
    <string name="dialog_submit">Submit</string>
    <string name="google_maps">Google Maps</string>
    <string name="pos">Pos</string>
    <string name="positive">Positive</string>
    <string name="sorts_readings">Sorts readings</string>
    <string name="export">Export All</string>
    <string name="more_info">More info</string>
    <string name="export_alone">Export alone</string>
    <string name="edit">Edit</string>
    <string name="visual_image">Visual Image</string>
    <string name="thermal_image">Thermal Image</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
</resources>