<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ReadingsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

            <LinearLayout
                android:id="@+id/linearlayout_sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/sort_image_height"
                    android:scaleType="centerInside"
                    android:adjustViewBounds="true"
                    android:background="?attr/colorPrimary"
                    android:id="@+id/btn_sort"
                    android:src="@drawable/sort"
                    android:text="@string/sort"
                    android:contentDescription="@string/sorts_readings"
                    android:layout_marginTop="6dp"
                    android:layout_marginStart="12dp"/>

                <TextView
                    android:id="@+id/sort_text"
                    android:layout_gravity="center"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="6dp"
                    android:textSize="@dimen/sort_image_text_size"
                    android:textColor="@color/white"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sort" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearlayout_export"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="end">

                <TextView
                    android:id="@+id/export_text"
                    android:layout_gravity="center"
                    android:layout_marginTop="6dp"
                    android:layout_marginEnd="6dp"
                    android:textSize="@dimen/export_image_text_size"
                    android:textColor="@color/white"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/export" />

                <ImageButton
                    android:id="@+id/btn_export"
                    android:src="@drawable/export"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/export_image_height"
                    android:background="?attr/colorPrimary"
                    android:scaleType="centerInside"
                    android:adjustViewBounds="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="6dp"
                    android:layout_marginEnd="12dp"
                    android:text="@string/export_data"
                    android:contentDescription="@string/export" />

            </LinearLayout>



        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_scrolling" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>